# opz

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.sh  opz.sh  pyoxidizer.toml
app/: Cargo.toml  pyoxidizer.toml
app/src/: main.rs
pyembed/: Cargo.toml  build.rs
pyembed/src/: lib.rs
src/: main.cpp  main.rs
src/python/opz/: hello.py
