[package]
name = "opz"
version = "0.1.0"
authors = ["Christopher Heckey <chrisheckey@gmail.com>"]
edition = "2018"

[dependencies]
jemallocator-global = { version = "0.3", optional = true }
pyembed = { path = "pyembed" }
clap = "2"

[features]
default = []
jemalloc = ["jemallocator-global", "pyembed/jemalloc"]
